--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
     "swiper": "^11.0.5"
