--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
+    "react-simple-maps": "^3.0.0",
+    "react-svg-worldmap": "^2.0.0-alpha.16",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
