--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "flat-color-icons": "^1.1.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
