--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "flat-color-icons": "^1.1.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-video": "^0.11.2",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
